# actiaug

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
actiaug/: __init__.py
actiaug/augmenter/: add_noise.py  base.py  convolve.py  crop.py  drift.py  dropout.py  flip.py  pool.py  quantize.py  resize.py  reverse.py  time_warp.py
docs/: quickstart.rst
tests/: test_classes.py  test_pipe.py  test_random_seed.py
